trash button event handler add to remove product done with storage remove this item

--- a/src/components/ReviewItem/ReviewItem.css
+++ b/src/components/ReviewItem/ReviewItem.css
@@ -41,6 +41,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+}
+.btn-delete:hover{
+    background-color: green;
 }
 .delete-icon{
     color: #EB5757;
