clear cart button functionalities done

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,9 +1,21 @@
-.cart{
+.cart {
     background: rgba(255, 153, 0, 0.3);
     padding: 25px;
     position: sticky;
     top: 0;
 }
-.cart p{
+
+.cart p {
     font-size: 17px;
+}
+
+.btn-clear-cart {
+    width: 90%;
+    margin: 10px auto;
+    display: flex;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
+    background: #FF3030;
+    border-radius: 4px;
 }
