--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,10 +1,26 @@
-.shop-container{
+.shop-container {
     display: grid;
     grid-template-columns: 4fr 1fr;
 }
-.products-container{
+
+.products-container {
     margin: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
+}
+
+.proceed-link{
+    text-decoration: none;
+}
+
+.btn-proceed {
+    background: #FF9900;
+    border-radius: 4px;
+    width: 90%;
+    margin: 10px auto;
+    display: flex;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
 }
