--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -24,3 +24,11 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.pagination{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.pagination .selected{
+    background-color: #FF9900;
+}
